--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.17",
+    "framer-motion": "^10.16.0",
     "next": "13.4.17",
     "react": "18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "18.2.0"
   }
 }
